Added Space Data singleton; Random Map Generator was moved to Kotlin; changed some code to a more nice one, mostly in Wind.